PCAdvancedMapViewer 	- Mousewheel zoom improved 	- Preferences ActionEvents implemented 	- MemoryCardCache caching removed
git-svn-id: http://mapsforge.googlecode.com/svn/trunk@1359 a424f762-2dd8-11df-bfeb-7b4c664f286a